tests/chapter_15/invalid_types/sub_double_from_ptr.c
int main(void)
{
    int *y = 0;
    return (y - 0.0 == 0.0);
}